--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <img src="your-photo.jpg" alt="Your Name">
     <h1>Your Name</h1>
-    <h2>Full Stack Web Developer</h2>
+    <h2>IT ADministrator</h2>
     <p><a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | <a href="https://github.com/yourusername">GitHub</a></p>
 </body>
 </html>
