--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Your Name - Portfolio</title>
     <style>
         body {
-            background-color: orange;
+            background-color: blue;
             text-align: center;
             font-family: Arial, sans-serif;
         }
