--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <img src="your-photo.jpg" alt="Your Name">
-    <h1>Your Name</h1>
+    <h1>MUHAMMAD SAQIB</h1>
     <h2>IT ADministrator</h2>
     <p><a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | <a href="https://github.com/yourusername">GitHub</a></p>
 </body>
