--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Muhammad Saqib</title>
     <style>
         body {
-            background-color: blue;
+            background-color: #0074D9; /* Softer orange */
+            color: white;
             text-align: center;
             font-family: Arial, sans-serif;
         }
@@ -13,11 +15,22 @@
             border-radius: 50%;
             width: 150px;
         }
+        a {
+            color: yellow; /* Makes links visible */
+            font-weight: bold;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <h1>MUHAMMAD SAQIB</h1>
-    <h2>IT ADministrator</h2>
-    <p><a href="https://linkedin.com/in/yourprofile">LinkedIn</a> | <a href="https://github.com/yourusername">GitHub</a></p>
+    <h2>IT Administrator</h2>
+    <p>
+        <a href="https://www.linkedin.com/in/muhammad-saqib-0627a690">LinkedIn</a> |
+        <a href="https://github.com/chaudarysaqib">GitHub</a>
+    </p>
 </body>
 </html>
