--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Saqib</title>
+    <title>Muhammad Saqib - IT Administrator</title>
     <style>
         body {
-            background-color: #0074D9; /* Softer orange */
-            color: white;
+            background-color: blue;
             text-align: center;
             font-family: Arial, sans-serif;
+            color: white;
         }
         img {
             border-radius: 50%;
             width: 150px;
         }
         a {
-            color: yellow; /* Makes links visible */
-            font-weight: bold;
+            color: yellow;
             text-decoration: none;
+            font-weight: bold;
         }
         a:hover {
             text-decoration: underline;
@@ -29,8 +29,8 @@
     <h1>MUHAMMAD SAQIB</h1>
     <h2>IT Administrator</h2>
     <p>
-        <a href="https://www.linkedin.com/in/muhammad-saqib-0627a690">LinkedIn</a> |
-        <a href="https://github.com/chaudarysaqib">GitHub</a>
+        <a href="https://www.linkedin.com/in/muhammad-saqib-0627a690" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/chaudarysaqib" target="_blank">GitHub</a>
     </p>
 </body>
 </html>
