--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </style>
 </head>
 <body>
-    <img src="WhatsApp Image 2025-03-12 at 15.30.23_4defdaf6.jpg" alt="Muhammad Saqib" class="profile-pic">
+    <img src="WhatsApp Image 2025-03-12 at 15.30.23_4defdaf6" alt="Muhammad Saqib" class="profile-pic">
 
     <h1>Muhammad Saqib</h1>
     <h2>IT Administrator</h2>
