--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid white;
+            box-shadow: 0px 0px 15px rgba(255, 126, 95, 0.6); /* Soft shadow matching the background */
         }
         h1 {
             font-size: 2.5em;
