--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid white;
-            box-shadow: 0px 0px 15px rgba(255, 126, 95, 0.6); /* Soft shadow matching the background */
+            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.6); /* Soft glow effect */
         }
         h1 {
             font-size: 2.5em;
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <img src="WhatsApp Image 2025-03-12 at 15.30.23_4defdaf6" alt="Muhammad Saqib" class="profile-pic">
+    <img src="profile.png" alt="Muhammad Saqib" class="profile-pic">
 
     <h1>Muhammad Saqib</h1>
     <h2>IT Administrator</h2>
