--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </style>
 </head>
 <body>
-    <img src="profile.png" alt="Muhammad Saqib" class="profile-pic">
+   <img src="images/profile.jpg" alt="Muhammad Saqib" class="profile-pic">
 
     <h1>Muhammad Saqib</h1>
     <h2>IT Administrator</h2>
